# TaskManager

./: CMakeLists.txt
proto/: Requests.proto  Responses.proto  Service.proto  Task.proto  TaskStructures.proto
src/: client.cpp  main.cpp  server.cpp
src/api/: AliasesProtoObjects.h  ComparisonProtoObjects.cpp  ComparisonProtoObjects.h  CreateProtoObjects.cpp  CreateProtoObjects.h  Task.proto  TasksSortBy.h
src/controller/: Controller.cpp
src/logging/: Initialisation.cpp  Initialisation.h
src/model/: Comparison.cpp  Comparison.h  GRPCEndPoint.cpp  GRPCEndPoint.h  GeneralizedTask.cpp  GeneralizedTask.h  IdGenerator.cpp  IdGenerator.h  Model.cpp  Model.h  SortBy.h  Task.cpp  Task.h  Task.proto  TaskId.proto  TaskManager.cpp  TaskManager.h  TasksSortBy.h
src/model/id/: IdGenerator.h  TaskId.cpp  TaskId.h
src/persistence/: Persister.cpp  Persister.h  TaskPersister.cpp  TaskPersister.h  TransportationTask.proto
src/proto/: Holder.h
src/subsidiary/: convert.h  print.h
src/ui/: Context.cpp  Context.h  Factory.cpp  Factory.h  Reader.cpp  Reader.h  StateMachine.cpp  StateMachine.h  StepMachine.cpp  StepMachine.h
src/ui/command/: Command.cpp  Command.h  Dependency.h  Error.h  Resources.h  Result.h
src/ui/context/: Context.cpp  Context.h  SubContext.cpp  SubContext.h
src/ui/controller/: Command.cpp  Command.h  Controller.cpp  Controller.h  DefaultController.h  GRPCEndPoint.cpp  GRPCEndPoint.h
src/ui/dependency/: Dependency.cpp  Dependency.h  DependencyForSteps.cpp  DependencyForSteps.h  DependencyForSubSteps.cpp  DependencyForSubSteps.h  SubDependency.cpp  SubDependency.h
src/ui/factory/: Factory.cpp  Factory.h  SubFactory.cpp  SubFactory.h
src/ui/input/: ConsoleManager.cpp  ConsoleManager.h  Converter.cpp  Converter.h  Printer.cpp  Printer.h  Reader.cpp  Reader.h  Validator.cpp  Validator.h
src/ui/machine/: Command.h  StepMachine.cpp  StepMachine.h  SubStepMachine.cpp  SubStepMachine.h
src/ui/state/: State.cpp  State.h  StateAdd.cpp  StateAdd.h
src/ui/step/: Add.cpp  Add.h  Dependency.h  Edit.cpp  Edit.h  Resources.h  Show.cpp  Show.h  Step.cpp  Step.h  StepAdd.cpp  StepAdd.h  StepAddSub.cpp  StepAddSub.h  StepEdit.cpp  StepEdit.h  StepShow.cpp  StepShow.h  SubStep.cpp  SubStep.h  SubStepOwners.cpp  SubStepOwners.h  SubSteps.cpp  SubSteps.h  Type.h  TypeOfStep.h
src/ui/view/: Convert.cpp  Convert.h  Converter.cpp  Converter.h  Printer.cpp  Printer.h  Reader.cpp  Reader.h  TypeOfCommand.h  View.cpp  View.h
src/utilities/: AliasesProtoObjects.h  ComparisonProtoObjects.cpp  ComparisonProtoObjects.h  Convert.cpp  Convert.h  CreateProtoObjects.cpp  CreateProtoObjects.h  SortingProtoObjects.cpp  SortingProtoObjects.h
tests/: CMakeLists.txt  IntegrationTest.cpp  MainTest.cpp  MultiThreadingTest.cpp
tests/model/: ComparisonTest.cpp  GRPCEndPointServerTest.cpp  GeneralizedTaskTest.cpp  IdGeneratorTest.cpp  ModelMock.h  ModelTest.cpp  TaskManagerMock.h  TaskManagerTest.cpp  TaskTest.cpp
tests/model/id/: IdGeneratorTest.cpp  TaskIdTest.cpp
tests/persistence/: PersisterTest.cpp  TaskPersisterMock.h  TaskPersisterTest.cpp
tests/ui/: ContextMock.h  ContextTest.cpp  FactoryMock.h  FactoryTest.cpp  StateMachineMock.h  StateMachineTest.cpp  StepMachineTest.cpp
tests/ui/command/: CommandMock.h  CommandTest.cpp
tests/ui/context/: ContextTest.cpp  SubContextTest.cpp
tests/ui/controller/: CommandMock.h  CommandTest.cpp  ControllerMock.h  ControllerTest.cpp  DefaultControllerMock.h  DefaultControllerTest.cpp  GRPCEndPointClientTest.cpp  TaskManagerMock.h
tests/ui/dependency/: DependencyTest.cpp  SubDependencyTest.cpp
tests/ui/factory/: FactoryMock.h  FactoryTest.cpp  SubFactoryMock.h  SubFactoryTest.cpp
tests/ui/input/: ConsoleManagerTest.cpp  ConverterTest.cpp  ValidatorTest.cpp
tests/ui/machine/: StepMachineMock.h  StepMachineTest.cpp  SubStepMachineTest.cpp
tests/ui/step/: StepMock.h  StepTest.cpp  SubStepMock.h  SubStepTest.cpp
tests/ui/view/: ConvertTest.cpp  ConverterTest.cpp  ViewMock.h  ViewTest.cpp
tests/utilities/: ComparisonProtoObjectsTest.cpp  ConvertTest.cpp  CreateProtoObjectsTest.cpp  SortingProtoObjectsTest.cpp
